fix(ekilex): break overflowing text in toast

--- a/eki-components/src/app.css
+++ b/eki-components/src/app.css
@@ -7,3 +7,7 @@
     "Helvetica Neue", arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+.break-word {
+  word-break: break-word;
+}
